# zarr-writers-benchmark

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  benchmark.py  conftest.py  environment.yml  main.py  setup.sh  vcpkg-configuration.json  vcpkg.json
cmake/: acquire-zarr.cmake
test.zarr/: .zarray
tests/: benchmark_test.py  common_test.py  cpp_zarr_test.py  ome_zarr_test.py  tensorstore_test.py  zarr_python_test.py
zarr_libraries/: __init__.py  common.py
zarr_libraries/acquire/: acquire.cpp  acquire.py  acquire_open.py  acquire_stream.py  acquire_zarr.py  acquire_zarrV3.py
zarr_libraries/acquire/include/: zarr.h
zarr_libraries/acquire_zarr/: acquire-zarr.cpp  acquire_zarr.py
zarr_libraries/cpp_zarr/: cpp_zarr.cpp  cpp_zarr.py
zarr_libraries/example_data/radialSin.zarr/: .zattrs
zarr_libraries/example_data/radialSin.zarr/0/: .zarray
zarr_libraries/example_data/radialSinTsCreate.zarr/: .zarray
zarr_libraries/example_data/stream.zarr/: .zattrs
zarr_libraries/ome_ngff/: ome_zarr.py
zarr_libraries/tensorstore/: tensorstore_zarr.py
zarr_libraries/z5py/: z5.py
zarr_libraries/zarr_python/: zarr_python.py
